tests/health/gold/sdk/tests__lsp__show-bad-completion-test.toit.gold
tests/lsp/show-bad-completion-test.toit:5:8: error: Package for prefix 'xyz' not found
import xyz show foo
       ^~~
